@@ -287,7 +287,7 @@ static const int cm118[] = { CMD_ALL, COLOR | STRING, THING, PARAM | STRING,
  IGNORE_TYPE_TO, DIRECTION };
 static const int cm119[] = { IGNORE_TYPE_AT, IMM_S16 | STRING, IMM_S16 | STRING,
  IGNORE_TYPE_TO, IMM_S16 | STRING, IMM_S16 | STRING };
-static const int cm120[] = { CMD_EDGE, CMD_COLOR, IGNORE_TYPE_TO, COLOR };
+static const int cm120[] = { CMD_EDGE, CMD_COLOR, IGNORE_TYPE_TO, COLOR | STRING };
 static const int cm121[] = { IGNORE_TYPE_TO, IGNORE_TYPE_THE, DIRECTION,
  IGNORE_TYPE_IS, STRING };
 static const int cm122[] = { IGNORE_TYPE_TO, IGNORE_TYPE_THE, DIRECTION,
